# marketplace-api-handler

./: .gitignore  Dockerfile.backend  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
deploy/: .env.example  docker-compose.yml
src/: api.py  config.py  consts.py  file_handler.py  logger.py  repository.py  responses_schemas.py  server.py  service.py
src/adapters/: database.py
src/db_models/: orders.py  products.py
tests/: conftest.py  test_data_service.py
tests/fixtures/: order.json  sales.json
